--- a/bmh_lims/frontend/templates/frontend/index.html
+++ b/bmh_lims/frontend/templates/frontend/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BMH LIMS</title>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Assistant&display=swap" rel="stylesheet"> 
 </head>
 <body>
 <div id="root">
