removed filter div, styled dropdown + clickAway functionality

--- a/bmh_lims/frontend/src/components/MaterialTable/styles.css
+++ b/bmh_lims/frontend/src/components/MaterialTable/styles.css
@@ -2,6 +2,7 @@
   background-color: #fafbff;
 }
 
+/* Table header*/
 .MuiDataGrid-colCellWrapper  {
   background-color: rgb(10, 60, 90, 0.9);
   color: white;
